--- a/snake.css
+++ b/snake.css
@@ -23,6 +23,7 @@ div {
 	height: auto;
 	margin: 15% auto;
 	padding: 20px;
+	box-shadow: 3px 3px 10px #888888;
 	text-align: center;
 	width: 50%;
 	min-width: 300px;
