--- a/snake.css
+++ b/snake.css
@@ -15,10 +15,9 @@ html {
 }
 
 body { height: 100%; width: 100%; }
+div, input { background-color: #EEEEEE; border: 3px solid #CCCCCC; }
 
 div {
-	background-color: #EEEEEE;
-	border: 3px solid #CCCCCC;
 	border-radius: 15px;
 	height: auto;
 	margin: 15% auto;
@@ -33,8 +32,6 @@ div {
 label { color: #444444; font-size: 30px; font-weight: bold; }
 
 input {
-	background-color: #EAEAEA;
-	border: 3px solid #CCCCCC;
 	border-radius: 5px;
 	color: #444444;
 	font-family: Monospace, Consolas, sans-serif;
